--- a/dayfinding.ipynb
+++ b/dayfinding.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "120178e2-df6e-4704-98e1-81fa5186c0ac",
    "metadata": {
     "scrolled": true,
@@ -73,80 +73,18 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['甲子',\n",
-       " '乙丑',\n",
-       " '丙寅',\n",
-       " '丁卯',\n",
-       " '戊辰',\n",
-       " '己巳',\n",
-       " '庚午',\n",
-       " '辛未',\n",
-       " '壬申',\n",
-       " '癸酉',\n",
-       " '甲戌',\n",
-       " '乙亥',\n",
-       " '丙子',\n",
-       " '丁丑',\n",
-       " '戊寅',\n",
-       " '己卯',\n",
-       " '庚辰',\n",
-       " '辛巳',\n",
-       " '壬午',\n",
-       " '癸未',\n",
-       " '甲申',\n",
-       " '乙酉',\n",
-       " '丙戌',\n",
-       " '丁亥',\n",
-       " '戊子',\n",
-       " '己丑',\n",
-       " '庚寅',\n",
-       " '辛卯',\n",
-       " '壬辰',\n",
-       " '癸巳',\n",
-       " '甲午',\n",
-       " '乙未',\n",
-       " '丙申',\n",
-       " '丁酉',\n",
-       " '戊戌',\n",
-       " '己亥',\n",
-       " '庚子',\n",
-       " '辛丑',\n",
-       " '壬寅',\n",
-       " '癸卯',\n",
-       " '甲辰',\n",
-       " '乙巳',\n",
-       " '丙午',\n",
-       " '丁未',\n",
-       " '戊申',\n",
-       " '己酉',\n",
-       " '庚戌',\n",
-       " '辛亥',\n",
-       " '壬子',\n",
-       " '癸丑',\n",
-       " '甲寅',\n",
-       " '乙卯',\n",
-       " '丙辰',\n",
-       " '丁巳',\n",
-       " '戊午',\n",
-       " '己未',\n",
-       " '庚申',\n",
-       " '辛酉',\n",
-       " '壬戌',\n",
-       " '癸亥']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['甲子', '乙丑', '丙寅', '丁卯', '戊辰', '己巳', '庚午', '辛未', '壬申', '癸酉', '甲戌', '乙亥', '丙子', '丁丑', '戊寅', '己卯', '庚辰', '辛巳', '壬午', '癸未', '甲申', '乙酉', '丙戌', '丁亥', '戊子', '己丑', '庚寅', '辛卯', '壬辰', '癸巳', '甲午', '乙未', '丙申', '丁酉', '戊戌', '己亥', '庚子', '辛丑', '壬寅', '癸卯', '甲辰', '乙巳', '丙午', '丁未', '戊申', '己酉', '庚戌', '辛亥', '壬子', '癸丑', '甲寅', '乙卯', '丙辰', '丁巳', '戊午', '己未', '庚申', '辛酉', '壬戌', '癸亥']\n"
+     ]
     }
    ],
    "source": [
     "with open('pairs.txt') as reader:  # reading the power pairs back from file\n",
     "    pairs = [line.strip() for line in reader.readlines()]\n",
     "    \n",
-    "pairs"
+    "print(pairs)"
    ]
   },
   {
@@ -161,19 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "a46caee7-c6ee-4add-937b-f88a22d18fa1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(1782, 4, 21, 6, 54)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1782-04-21 06:54:00\n"
+     ]
     }
    ],
    "source": [
@@ -184,7 +119,7 @@
     "                   hour=6,\n",
     "                   minute=54)\n",
     "\n",
-    "RoSo"
+    "print(RoSo)"
    ]
   },
   {
@@ -239,30 +174,6 @@
    "source": [
     "zero_duang = (pairs.index('壬寅'), pairs.index('甲辰'), pairs.index('丙午'), pairs.index('辛卯'))\n",
     "zero_duang  # year, month, day, watch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "d6c414a4-53e1-48e1-9488-298475876dcc",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "38"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zero_year_index, zero_month_index, zero_day_index, zero_watch_index = zero_duang\n",
-    "zero_year_index"
    ]
   },
   {
@@ -789,31 +700,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "5f4a316f-cf6f-458d-be5e-28a6a95d3148",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "##### debugga\n",
-    "# def day_pair(timepoint):\n",
-    "#     day_delta = (timepoint.date() - RoSo.date()).days\n",
-    "#     print(day_delta)\n",
-    "#     index = zero_day + day_delta % 60\n",
-    "#     print(index)\n",
-    "#     if index > 59:  # automatically -60 if goes out of range\n",
-    "#         index-=60\n",
-    "#         print(index)    \n",
-    "#     pair = pairs[index]\n",
-    "#     return pair"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 28,
    "id": "80de00c5-7cb5-4054-be35-b7f51e18444a",
    "metadata": {},
@@ -847,6 +733,14 @@
    ],
    "source": [
     "print(all_pairs(touchstone_timepoint), tuple(touchstone_pairs.values())[:3], all_pairs(touchstone_timepoint) == tuple(touchstone_pairs.values())[:3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91798afa-0f52-4101-acbd-5bf3a2788fad",
+   "metadata": {},
+   "source": [
+    "### Test everything"
    ]
   },
   {
