--- a/dayfinding.ipynb
+++ b/dayfinding.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "120178e2-df6e-4704-98e1-81fa5186c0ac",
    "metadata": {
     "scrolled": true,
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "a46caee7-c6ee-4add-937b-f88a22d18fa1",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2022, 7, 27, 15, 58, 0, 979634)"
+       "datetime.datetime(2022, 7, 28, 15, 10, 30, 124248)"
       ]
      },
      "execution_count": 5,
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f1fdceab-7f0f-4cd5-bc57-c5037adbd205",
    "metadata": {},
    "outputs": [
@@ -194,6 +194,7 @@
     }
    ],
    "source": [
+    "zero_year_index, zero_month_index, zero_day_index, zero_watch_index = zero_duang\n",
     "print('year:', '\\t', pairs[zero_year_index])\n",
     "print('month:', '\\t', pairs[zero_month_index])\n",
     "print('day:', '\\t', pairs[zero_day_index])\n",
@@ -222,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "45a11bec-05fc-4209-8f64-77ff76b496b1",
    "metadata": {},
    "outputs": [
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "9ce117e9-2e1a-435c-a087-9766fb0e5f85",
    "metadata": {},
    "outputs": [
@@ -298,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c808ed6d-c436-473b-aef3-bf7107936f95",
    "metadata": {},
    "outputs": [
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "97db6960-b2b0-437b-b9dc-3f4f04d87d6f",
    "metadata": {},
    "outputs": [
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "95472a7d-5b12-49d8-a930-f2697df902f2",
    "metadata": {},
    "outputs": [],
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "342d66c0-0fcb-4345-a018-5777519d1cba",
    "metadata": {},
    "outputs": [
@@ -404,7 +405,7 @@
        "('壬戌', '壬戌', True)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "1b087a97-2e95-403c-a4e6-36d49fcbcfe0",
    "metadata": {},
    "outputs": [],
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "1cb964e0-7aaa-466b-8ddd-16f789e86536",
    "metadata": {},
    "outputs": [],
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "17ac22c9-ee7a-479c-ac32-57f145638fad",
    "metadata": {},
    "outputs": [
@@ -461,7 +462,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1978 戊午 55\n"
+      "1952 壬辰 29\n"
      ]
     }
    ],
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "8481769e-05da-487a-b6ff-0dc3224bb46f",
    "metadata": {},
    "outputs": [
@@ -480,23 +481,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2014 甲午 31\n",
+      "2000 庚辰 17\n",
+      "2040 庚申 57\n",
+      "1993 癸酉 10\n",
       "1944 甲申 21\n",
-      "1927 丁卯 4\n",
-      "1982 壬戌 59\n",
-      "1972 壬子 49\n",
-      "2041 辛酉 58\n",
-      "1984 甲子 1\n",
-      "1978 戊午 55\n",
-      "1957 丁酉 34\n",
-      "1941 辛巳 18\n",
-      "1924 甲子 1\n",
-      "2019 己亥 36\n",
+      "1975 乙卯 52\n",
+      "1956 丙申 33\n",
+      "1949 己丑 26\n",
+      "1969 己酉 46\n",
+      "2023 癸卯 40\n",
       "2037 丁巳 54\n",
-      "2016 丙申 33\n",
-      "1925 乙丑 2\n",
-      "1934 甲戌 11\n",
-      "1958 戊戌 35\n",
-      "2005 乙酉 22\n"
+      "2034 甲寅 51\n",
+      "1967 丁未 44\n",
+      "1927 丁卯 4\n",
+      "1929 己巳 6\n",
+      "2005 乙酉 22\n",
+      "1945 乙酉 22\n"
      ]
     }
    ],
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "e078f3e8-f19c-4a11-9725-47370c37f3c2",
    "metadata": {},
    "outputs": [
@@ -519,7 +520,7 @@
        " datetime.datetime(1982, 6, 29, 13, 40))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "80b83afd-919d-4422-a027-ab1575a55a3b",
    "metadata": {},
    "outputs": [
@@ -549,7 +550,7 @@
        "('壬戌', 1982)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "541f22d1-fb30-4d11-b553-f3b4185cda69",
    "metadata": {},
    "outputs": [
@@ -579,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "dadd17c1-4f5a-494b-aa9b-21c5e13e1214",
    "metadata": {},
    "outputs": [
@@ -606,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "eeed595e-d997-4e58-9f2c-0362a3ad44ac",
    "metadata": {},
    "outputs": [],
@@ -628,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "6d381089-a321-4161-b291-7c56a29e685c",
    "metadata": {},
    "outputs": [
@@ -638,7 +639,7 @@
        "('丙午', '丙午', True)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "a42799cc-c6ec-4875-a59f-50057cbfe490",
    "metadata": {},
    "outputs": [
@@ -667,7 +668,7 @@
        "('辛丑', '辛丑', True)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "19e1295a-8599-4ca3-9d26-232014a94296",
    "metadata": {},
    "outputs": [],
@@ -700,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "80de00c5-7cb5-4054-be35-b7f51e18444a",
    "metadata": {},
    "outputs": [],
@@ -719,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "22b29dad-ef85-42fa-9818-46098e119d61",
    "metadata": {},
    "outputs": [
@@ -753,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "4e9490ef-9b70-44d3-bc99-9e866b11ff70",
    "metadata": {},
    "outputs": [
@@ -779,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "b7cecc4a-2d12-4c9e-bfd9-986b4112bf1c",
    "metadata": {},
    "outputs": [
@@ -805,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "294ec132-8be0-4c7b-bd73-a9620ebdc8de",
    "metadata": {},
    "outputs": [
