year pair now changes on Dec 22

--- a/build_bazi_chart.ipynb
+++ b/build_bazi_chart.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 94,
    "id": "2629bdbd-7bab-4e77-8225-29fce8626f6a",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 95,
    "id": "d735f521-710e-4372-8ca5-f420766950cc",
    "metadata": {
     "scrolled": true,
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 96,
    "id": "120178e2-df6e-4704-98e1-81fa5186c0ac",
    "metadata": {
     "scrolled": true,
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 97,
    "id": "a46caee7-c6ee-4add-937b-f88a22d18fa1",
    "metadata": {},
    "outputs": [
@@ -125,17 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 98,
    "id": "74eae541-db41-4a8a-b5a1-c35ab70dc9e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2022, 7, 31, 14, 39, 55, 647159)"
+       "datetime.datetime(2022, 8, 1, 13, 10, 58, 469978)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 99,
    "id": "b0cc96f7-b078-4258-93b8-1f67e6973955",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "(38, 40, 42, 27)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 100,
    "id": "f1fdceab-7f0f-4cd5-bc57-c5037adbd205",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 101,
    "id": "4a10e586-8ca6-4a0c-a677-747b1b4a3dbb",
    "metadata": {},
    "outputs": [],
@@ -273,12 +273,12 @@
    "source": [
     "1. **Touchstone duang to try everything first on**\n",
     "\n",
-    "<img src=\"duang1.jpg\" width=10%>"
+    "<img src=\"duang1.jpg\" width=15%>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 102,
    "id": "c36fe169-e2f1-4729-ac3e-3534012f9964",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
        "TestDuang(1982-06-29 13:40:00; watch: 戊午; day: 癸未; month: 丙午; year: 壬戌)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,6 +297,52 @@
     "touchstone = TestDuang(2525-543, 6, 29, 13, 40, \n",
     "                       '壬戌', '丙午', '癸未', '戊午')\n",
     "touchstone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "5ba6e6a2-3fa4-42e1-abcb-0a4bc705c109",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestDuang(1982-06-29 12:40:00; watch: 丁巳; day: 癸未; month: 丙午; year: 壬戌)"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "touchstoneA = TestDuang(2525-543, 6, 29, 12, 40, \n",
+    "                       '壬戌', '丙午', '癸未', '丁巳')\n",
+    "touchstoneA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "c30b8f4e-749e-4c2a-8661-9770750e1a84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestDuang(1982-06-29 15:40:00; watch: 己未; day: 癸未; month: 丙午; year: 壬戌)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "touchstoneB = TestDuang(2525-543, 6, 29, 15, 40, \n",
+    "                       '壬戌', '丙午', '癸未', '己未')\n",
+    "touchstoneB"
    ]
   },
   {
@@ -311,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 105,
    "id": "829f70c5-f2c8-4e7a-bde0-7bf4c83ed9e1",
    "metadata": {},
    "outputs": [
@@ -321,7 +367,7 @@
        "TestDuang(1982-01-12 00:00:00; watch: None; day: 乙未; month: 辛丑; year: 壬戌)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 106,
    "id": "8ada74af-4692-4807-99b2-ef55756fef53",
    "metadata": {},
    "outputs": [
@@ -354,7 +400,7 @@
        "TestDuang(1955-10-28 22:00:00; watch: 辛亥; day: 壬戌; month: 丙戌; year: 乙未)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 107,
    "id": "14bf6b07-bb61-44b1-ab77-25bc2bca0130",
    "metadata": {},
    "outputs": [
@@ -387,7 +433,7 @@
        "TestDuang(1947-07-15 00:00:00; watch: None; day: 乙未; month: 丁未; year: 丁亥)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 108,
    "id": "1014eb40-645a-4c80-b5c5-c4c24f4c3729",
    "metadata": {},
    "outputs": [
@@ -420,7 +466,7 @@
        "TestDuang(2013-07-27 07:59:00; watch: 戊辰; day: 甲午; month: 己未; year: 癸巳)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 109,
    "id": "5c832af0-0e42-4cca-a487-fe79ed1cd51d",
    "metadata": {},
    "outputs": [
@@ -453,7 +499,7 @@
        "TestDuang(1973-02-14 23:45:00; watch: 庚子; day: 壬午; month: 甲寅; year: 癸丑)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,9 +515,7 @@
    "id": "b62361e2-430b-481f-a259-b86d150aa901",
    "metadata": {},
    "source": [
-    "## BEGIN CALCULATIONS\n",
-    "\n",
-    "Calculating for standard calendar year as yet."
+    "## BEGIN CALCULATIONS"
    ]
   },
   {
@@ -486,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 110,
    "id": "95472a7d-5b12-49d8-a930-f2697df902f2",
    "metadata": {},
    "outputs": [],
@@ -494,6 +538,8 @@
     "def year_pair(timepoint):\n",
     "    their_year = timepoint.year\n",
     "    index = zero_year_index + ((their_year - RoSo.year) % 60) - int((zero_year_index + ((their_year - RoSo.year) % 60) > 59)) * 60\n",
+    "    if timepoint.month == 12 and timepoint.day >= 22:  # year pair changes on Dec 22\n",
+    "        index += 1\n",
     "    pair = pairs[index]\n",
     "    return pair"
    ]
@@ -508,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 111,
    "id": "6b125b1a-1e07-4913-9464-991ae7961ef7",
    "metadata": {},
    "outputs": [
@@ -518,7 +564,7 @@
        "('壬戌', '壬戌', True)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 112,
    "id": "1b087a97-2e95-403c-a4e6-36d49fcbcfe0",
    "metadata": {},
    "outputs": [],
@@ -549,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 113,
    "id": "1cb964e0-7aaa-466b-8ddd-16f789e86536",
    "metadata": {},
    "outputs": [],
@@ -567,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 114,
    "id": "17ac22c9-ee7a-479c-ac32-57f145638fad",
    "metadata": {},
    "outputs": [
@@ -575,7 +621,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1994 甲戌 11\n"
+      "2042 壬戌 59\n"
      ]
     }
    ],
@@ -586,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 115,
    "id": "8481769e-05da-487a-b6ff-0dc3224bb46f",
    "metadata": {},
    "outputs": [
@@ -594,23 +640,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2010 庚寅 27\n",
-      "1935 乙亥 12\n",
+      "1938 戊寅 15\n",
+      "1970 庚戌 47\n",
       "1925 乙丑 2\n",
-      "1953 癸巳 30\n",
-      "1988 戊辰 5\n",
-      "1933 癸酉 10\n",
-      "1928 戊辰 5\n",
-      "2009 己丑 26\n",
-      "2041 辛酉 58\n",
-      "2003 癸未 20\n",
-      "1989 己巳 6\n",
-      "1926 丙寅 3\n",
-      "1997 丁丑 14\n",
-      "1973 癸丑 50\n",
+      "1944 甲申 21\n",
+      "1930 庚午 7\n",
+      "1972 壬子 49\n",
+      "1941 辛巳 18\n",
+      "1971 辛亥 48\n",
+      "2002 壬午 19\n",
+      "1939 己卯 16\n",
       "1993 癸酉 10\n",
-      "1990 庚午 7\n",
-      "1977 丁巳 54\n"
+      "1981 辛酉 58\n",
+      "1996 丙子 13\n",
+      "1955 乙未 32\n",
+      "2041 辛酉 58\n",
+      "1928 戊辰 5\n",
+      "1973 癸丑 50\n"
      ]
     }
    ],
@@ -630,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 116,
    "id": "80b83afd-919d-4422-a027-ab1575a55a3b",
    "metadata": {},
    "outputs": [
@@ -640,7 +686,7 @@
        "('壬戌', 1982)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 117,
    "id": "541f22d1-fb30-4d11-b553-f3b4185cda69",
    "metadata": {},
    "outputs": [
@@ -670,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 118,
    "id": "dadd17c1-4f5a-494b-aa9b-21c5e13e1214",
    "metadata": {},
    "outputs": [
@@ -678,7 +724,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1982-12-31 | 壬戌 | 壬戌 | True\n"
+      "1982-12-31 | 癸亥 | 壬戌 | False\n"
      ]
     }
    ],
@@ -697,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 119,
    "id": "eeed595e-d997-4e58-9f2c-0362a3ad44ac",
    "metadata": {},
    "outputs": [],
@@ -719,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 120,
    "id": "6d381089-a321-4161-b291-7c56a29e685c",
    "metadata": {},
    "outputs": [
@@ -729,7 +775,7 @@
        "('丙午', '丙午', True)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 121,
    "id": "a42799cc-c6ec-4875-a59f-50057cbfe490",
    "metadata": {},
    "outputs": [
@@ -758,7 +804,7 @@
        "('辛丑', '辛丑', True)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 122,
    "id": "19e1295a-8599-4ca3-9d26-232014a94296",
    "metadata": {},
    "outputs": [],
@@ -793,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 123,
    "id": "80de00c5-7cb5-4054-be35-b7f51e18444a",
    "metadata": {},
    "outputs": [],
@@ -812,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 124,
    "id": "22b29dad-ef85-42fa-9818-46098e119d61",
    "metadata": {},
    "outputs": [
@@ -846,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 125,
    "id": "4e9490ef-9b70-44d3-bc99-9e866b11ff70",
    "metadata": {},
    "outputs": [
@@ -872,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 126,
    "id": "b7cecc4a-2d12-4c9e-bfd9-986b4112bf1c",
    "metadata": {},
    "outputs": [
@@ -898,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 127,
    "id": "294ec132-8be0-4c7b-bd73-a9620ebdc8de",
    "metadata": {},
    "outputs": [
@@ -924,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 128,
    "id": "6d12dc94-a7e8-4c7f-b7c8-0a0211ec12a6",
    "metadata": {},
    "outputs": [],
@@ -941,7 +987,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 129,
+   "id": "bb7e469d-3526-42fc-b14e-0b2cff354cd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(1982, 6, 29, 13, 40)"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timepoint = touchstone.timepoint\n",
+    "timepoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "7d6ead96-cf11-45e8-a933-adc6706cb26a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adjusted_hour = timepoint.hour - int(timepoint.hour % 2 == 0)\n",
+    "adjusted_hour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "e59f0d0a-4fdf-4c2a-acac-5fa196ff7e9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(1982, 6, 29, 13, 0)"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timepoint.replace(hour = adjusted_hour, minute = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
    "id": "04bc29e2-a7a8-4ad6-bb4a-f12871e76428",
    "metadata": {},
    "outputs": [],
@@ -956,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 133,
    "id": "c70f186c-73de-4c81-815c-b2d6ac909a1f",
    "metadata": {},
    "outputs": [],
@@ -971,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 134,
    "id": "d3c7fe53-70a2-404e-ac48-de1f93537690",
    "metadata": {},
    "outputs": [],
@@ -982,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 135,
    "id": "bc691214-8ebe-442f-9ed3-5a127b8a7575",
    "metadata": {},
    "outputs": [],
@@ -1001,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 136,
    "id": "92005b94-6021-4f33-8a9f-ec5b93edf081",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1122,7 @@
        "('己未', '戊午', False)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 137,
    "id": "3f315422-b9fc-4b20-9d7a-e7025be3ba41",
    "metadata": {},
    "outputs": [
@@ -1039,6 +1150,8 @@
      "output_type": "stream",
      "text": [
       "1982-06-29 13:40:00 戊午 己未 False\n",
+      "1982-06-29 12:40:00 丁巳 戊午 False\n",
+      "1982-06-29 15:40:00 己未 庚申 False\n",
       "1955-10-28 22:00:00 辛亥 辛亥 True\n",
       "2013-07-27 07:59:00 戊辰 戊辰 True\n",
       "1973-02-14 23:45:00 庚子 庚子 True\n"
@@ -1069,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 138,
    "id": "394ac1fe-d41c-4fd7-b2fd-651530c9c47f",
    "metadata": {},
    "outputs": [
@@ -1077,17 +1190,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('壬戌', '丙午', '癸未', '己未') ('壬戌', '丙午', '癸未', '戊午') False\n",
-      "('乙未', '丙戌', '壬戌', '辛亥') ('乙未', '丙戌', '壬戌', '辛亥') True\n",
-      "('癸巳', '己未', '甲午', '戊辰') ('癸巳', '己未', '甲午', '戊辰') True\n",
-      "('癸丑', '甲寅', '壬午', '庚子') ('癸丑', '甲寅', '壬午', '庚子') True\n"
+      "1982-06-29 13:40:00 ('壬戌', '丙午', '癸未', '己未') ('壬戌', '丙午', '癸未', '戊午') False\n",
+      "1982-06-29 12:40:00 ('壬戌', '丙午', '癸未', '戊午') ('壬戌', '丙午', '癸未', '丁巳') False\n",
+      "1982-06-29 15:40:00 ('壬戌', '丙午', '癸未', '庚申') ('壬戌', '丙午', '癸未', '己未') False\n",
+      "1955-10-28 22:00:00 ('乙未', '丙戌', '壬戌', '辛亥') ('乙未', '丙戌', '壬戌', '辛亥') True\n",
+      "2013-07-27 07:59:00 ('癸巳', '己未', '甲午', '戊辰') ('癸巳', '己未', '甲午', '戊辰') True\n",
+      "1973-02-14 23:45:00 ('癸丑', '甲寅', '壬午', '庚子') ('癸丑', '甲寅', '壬午', '庚子') True\n"
      ]
     }
    ],
    "source": [
     "for instance in TestDuang.instances:\n",
     "    if instance.watch_pair:\n",
-    "        print(*test_all(instance))"
+    "        print(instance.timepoint, *test_all(instance))"
    ]
   },
   {
@@ -1100,8 +1215,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "id": "fa96da26-2eda-4198-b12d-be131c434d73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestDuang(1982-06-29 13:40:00; watch: 戊午; day: 癸未; month: 丙午; year: 壬戌)"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "touchstone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86048d1a-2d79-4927-b7f4-18b7ce538177",
    "metadata": {},
    "outputs": [],
    "source": []
